force-app/src/objects/PriceApi__Bulk_Price_Rule__c.object
<CustomObject>
    <fields>
        <fullName>PriceApi__Discount_Percentage__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This defines the percent discount that will be applied against the default price of the defined items.</description>
        <inlineHelpText>This defines the percent discount that will be applied against the default price of the defined items.</inlineHelpText>
        <label>Price Rule Percentage</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PriceApi__End_Date__c</fullName>
        <description>If a pricing rule is date-driven what date does this rule expire and become an inactive price for the product?</description>
        <inlineHelpText>If a pricing rule is date-driven what date does this rule expire and become an inactive price for the product?</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PriceApi__Event_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked when we select all Event items as the item criteria.</description>
        <inlineHelpText>This field is checked when we select all Event items as the item criteria.</inlineHelpText>
        <label>Event Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PriceApi__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Activates and Deactivates all related price rules.</description>
        <inlineHelpText>Activates and Deactivates all related price rules.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PriceApi__Item_List__c</fullName>
        <description>Defines the Item/Item Class/Catalog/Store/Business Group (csv) that will receive the discount.</description>
        <inlineHelpText>Defines the Item/Item Class/Catalog/Store/Business Group (csv) that will receive the discount.</inlineHelpText>
        <label>Item List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PriceApi__Item_Type__c</fullName>
        <description>Specify the grouping of items to apply the discount.</description>
        <inlineHelpText>Specify the grouping of items to apply the discount.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Groups</fullName>
                </value>
                <value>
                    <fullName>Catalogs</fullName>
                </value>
                <value>
                    <fullName>Event Items</fullName>
                </value>
                <value>
                    <fullName>Item Classes</fullName>
                </value>
                <value>
                    <fullName>Items</fullName>
                </value>
                <value>
                    <fullName>Stores</fullName>
                </value>
                <value>
                    <fullName>Subscription Items</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceApi__Max_Num_Available__c</fullName>
        <description>Enter the minimum quantity that must be purchased for this rule to apply to a purchase of the item. Leave blank to not constrain rule assignment by minimum quantity.</description>
        <inlineHelpText>Enter the minimum quantity that must be purchased for this rule to apply to a purchase of the item. Leave blank to not constrain rule assignment by minimum quantity.</inlineHelpText>
        <label>Max Num Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriceApi__Max_Quantity__c</fullName>
        <description>The maximum number of times this rule can be used. Typically used to incentivize customers to purchase products early or for flash/date-driven sales. Leave blank if you do not want to limit the number of times the rule can be applied.</description>
        <inlineHelpText>The maximum number of times this rule can be used. Typically used to incentivize customers to purchase products early or for flash/date-driven sales. Leave blank if you do not want to limit the number of times the rule can be applied.</inlineHelpText>
        <label>Max Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriceApi__Min_Quantity__c</fullName>
        <description>Enter the maximum quantity that can not be exceeded for this rule to apply to be valid for any given transaction scenario. Leave blank to disable max quantity as a constraint for the rule.</description>
        <inlineHelpText>Enter the maximum quantity that can not be exceeded for this rule to apply to be valid for any given transaction scenario. Leave blank to disable max quantity as a constraint for the rule.</inlineHelpText>
        <label>Min Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriceApi__Price_Rule_Name__c</fullName>
        <description>Provide the name that will be used to create new Price Rule Names.</description>
        <inlineHelpText>Provide the name that will be used to create new Price Rule Names.</inlineHelpText>
        <label>Price Rule Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PriceApi__Required_Badge_Types__c</fullName>
        <description>Comma separated list of Badge Types required to be considered eligible for the Price Rule.</description>
        <inlineHelpText>Comma separated list of Badge Types required to be considered eligible for the Price Rule.</inlineHelpText>
        <label>Required Badge Types</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PriceApi__Required_Source_Codes__c</fullName>
        <description>Comma separated list of Source Codes required to be considered eligible for the Price Rule.</description>
        <inlineHelpText>Comma separated list of Source Codes required to be considered eligible for the Price Rule.</inlineHelpText>
        <label>Required Source Codes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PriceApi__Required_Subscription_Plans__c</fullName>
        <description>Select the Subscription Plan that must be selected for this rule to apply to the purchase of the items. Leave blank to not constrain rule by Subscription Plan.</description>
        <inlineHelpText>Select the Subscription Plan that must be selected for this rule to apply to the purchase of the items. Leave blank to not constrain rule by Subscription Plan.</inlineHelpText>
        <label>Required Subscription Plans</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PriceApi__Start_Date__c</fullName>
        <description>If a pricing rule is date-driven what date does this rule become an active/available price for the item?</description>
        <inlineHelpText>If a pricing rule is date-driven what date does this rule become an active/available price for the item?</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PriceApi__Subscription_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked when we select Subscription Items as the Item Type in the price rule builder.</description>
        <inlineHelpText>This field is checked when we select Subscription Items as the Item Type in the price rule builder.</inlineHelpText>
        <label>Subscription Items</label>
        <type>Checkbox</type>
    </fields>
    <label>Price Rules Manager</label>
    <listViews>
        <fullName>PriceApi__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BPR-{00000}</displayFormat>
        <label>Price Rules Manager Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Rules Manager</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>